# digit-recognizer

./: .gitignore  Cargo.toml  Justfile  LICENSE.txt  Makefile  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml  rust.yml
assets/: gz.worker.9628906b.js  gz.worker.aab55567.js  gz_bg.13caa76e.wasm  gz_bg.82b8a017.wasm  gz_bg.99344dd1.wasm  index.0067b50b.css  index.010390cd.js  index.4a6a5b65.js  index.51db03e2.js  index.54d516fb.js  index.5f581ac5.css  index.66ba9f56.js  index.7ce70a8d.css  index.7d066b30.css  index.82fdf56e.js  index.84a10ecc.js  index.8dd905ae.js  index.9bb86eab.css  index.9c2b6029.js  index.9e176794.js  index.a0cf9435.js  index.acb15218.css  index.bb97d85b.js  index.be7400be.js  index.be9adc04.js  index.c9e7ac49.css  index.cc434da1.js  index.dc450fb5.js  index.e44b7b70.css  index.f059042c.css  index.f9f40d05.js  kmeans.worker.056ea035.js  kmeans.worker.133292a9.js  kmeans.worker.41a342fe.js  kmeans.worker.7e488ee9.js  kmeans.worker.8ba6bcb4.js  kmeans.worker.cdbe106a.js  kmeans.worker.f362faf0.js  kmeans_bg.0495daec.wasm  kmeans_bg.43739aed.wasm  (+17 more)
docs/: index.html
docs/assets/: index-0f735f2a.js  index-2804ad86.css  index-2994ea89.css  index-32b9f6f7.js  index-3a3a9673.css  index-48de2b60.css  index-54b478f0.js  index-6aa46e4e.js  index-6d5b3cef.js  index-6e92f04d.js  index-7ff7c403.css  index-82c90e4e.js  index-aecd3e6c.css  index-b99eab60.js  index-ea832030.js  index-f5f507a7.js  wasm.worker-58fd59a2.js  wasm.worker-6280e143.js  wasm.worker-ad72e4d2.js  wasm.worker-ea2af416.js  wasm.worker-f4cc9017.js  wasm.worker-f8aca0f9.js
examples/: test.rs
files/: .gitignore  dataset.json  display.py  download.py  parse_graph.py
libs/algorithms/k-means/examples/: test-kmeans.rs
libs/algorithms/k-means/src/: lib.rs
libs/algorithms/k-nearest/examples/: test-knn.rs
libs/algorithms/k-nearest/src/: lib.rs
libs/algorithms/neural-network/: Cargo.toml  README.md
libs/algorithms/neural-network/examples/: test-nn.rs
libs/helper/gz/: Cargo.toml
libs/helper/image-processing/: Cargo.toml
libs/helper/image-processing/src/: lib.rs
libs/helper/mnist/src/: lib.rs
minst-rs/: Cargo.toml
pkg/: package.json  rust_digit_recognition.d.ts  rust_digit_recognition.js  rust_digit_recognition_bg.wasm  rust_digit_recognition_bg.wasm.d.ts
rust/: .gitignore  Cargo.toml  Makefile  package-lock.json
rust/kmeans/: Cargo.toml
rust/kmeans/examples/: test-kmeans.rs
rust/kmeans/src/: algorithm.rs  init.rs  iter.rs  lib.rs
rust/knn/: Cargo.toml
rust/knn/examples/: test-knn.rs
rust/knn/src/: lib.rs
rust/mnist/: Cargo.toml
rust/mnist-rs/: Cargo.toml
rust/mnist/data/: source.txt
rust/mnist/examples/: test-mnist.rs
rust/mnist/src/: lib.rs
rust/perceptron/: Cargo.toml
rust/perceptron/examples/: test-perceptron.rs
rust/perceptron/src/: lib.rs
rust/wasm/mnist-rs/: Cargo.toml
rust/wasm/mnist-rs/src/: lib.rs
rust/wasm/unpack/: Cargo.toml
rust/wasm/unpack/src/: lib.rs
src/: helper.rs  k_means.rs  lib.rs  main.rs  mnist.rs
src/k_means/: cluster.rs  mod.rs
wasm/: Cargo.toml  LICENSE_MIT  Makefile  README.md
wasm/examples/: test-mnist.rs  test-models.rs
wasm/gz/: Cargo.toml
wasm/gz/examples/: save_decoded.rs
wasm/gz/src/: lib.rs
wasm/k-nearest/: Cargo.toml
wasm/kmeans/: Cargo.toml
wasm/kmeans/examples/: test.rs
wasm/kmeans/src/: cluster.rs  kmeans.rs  lib.rs
wasm/linear-classifier/: Cargo.toml
wasm/linear-classifier/benches/: matrix.rs
wasm/linear-classifier/examples/: test-adaline.rs  test-linear-classifier.rs  test-perceptron.rs
wasm/linear-classifier/src/: adaline.rs  lib.rs  perceptron.rs
wasm/mnist/: Cargo.toml
wasm/mnist-rs/: Cargo.toml
wasm/mnist-rs/examples/: test-wasm.rs
wasm/mnist-rs/src/: lib.rs  mnist.rs
wasm/mnist/src/: lib.rs
wasm/src/: dataset.rs  kmeans.rs  knn.rs  lib.rs  perceptron.rs
wasm/src/dataset/: mnist.rs  mod.rs
wasm/src/models/: mod.rs
wasm/src/models/kmeans/: algorithm.rs  mod.rs
wasm/src/models/knn/: mod.rs
wasm/src/models/perceptron/: mod.rs
wasm/tar/: Cargo.toml
wasm/tar/src/: lib.rs
wasm/unpack/: Cargo.toml
wasm/wasm-tar/: Cargo.toml
wasm/wasm-tar/src/: lib.rs
web/: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  server.py  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/assets/: github-logo.svelte  theme-icon.svelte
web/src/components/: Canvas.svelte  Canvas2.svelte  Downloader.svelte  PreTrainedModels.svelte
web/src/lib/: DataLoader.svelte  DisplayImage.svelte  MNISTImager.svelte  ModelTrainer.svelte  NavBar.svelte  canvas.ts  chart.ts  datastore.ts  mnist.dataset.ts  mnist_dataset.json
web/src/lib/common/: fetch_dataset.ts  load_worker.ts  mnist.dataset.ts
web/src/lib/components/: Slider.svelte
web/src/lib/evaluate/: DigitCanvas.svelte  PredictDigit.svelte  PredictionChart.svelte  canvas.ts
web/src/lib/kmeans/: Canvas.svelte  DisplayTraining.svelte  KMeansClustering.svelte  Settings.svelte
web/src/lib/param/: KMeansParam.svelte  KNearestNeighborsParam.svelte  PerceptronParam.svelte
web/src/lib/training/: TrainingButton.svelte  TrainingChart.svelte
web/src/lib/types/: kmeans.types.ts  knn.types.ts  models.types.ts  perceptron.types.ts
web/src/lib/worker/: lib.ts  wasm.pipe.ts  wasm.ts  wasm.types.ts  wasm.worker.ts
web/src/lib/workers/: gz.worker.ts  load.ts  mnist.wasm.worker.ts  unpack.worker.ts
web/src/sections/kmeans/: Canvas.svelte  DisplayTraining.svelte  KMeansClustering.svelte  cluster.d.ts
web/src/worker/: lib.ts  wasm.ts  wasm.worker.ts
www/: index.js
(+11 files in other folders)
