[package]
name = "rust-digit-recognition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version="0.2", features = ["js"] }

[dev-dependencies]
image = "0.24"
