[package]
name = "mnist"
version = "0.1.0"
authors = ["Jason Wang <jason.chengyao.wang@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
rayon = ["ndarray/rayon"]

[dependencies]
flate2 = { version = "1.0" }
ndarray = { version = "0.15" }
ndarray-rand = { version = "0.14" }
ndarray-stats = { version = "0.5" }
getrandom = { version = "0.2.10", features = ["js"] }

wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
