[package]
name = "kmeans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = { version="0.2", features = ["serde-serialize"] }
getrandom = { version="0.2", features = ["js"] }
mnist = { path = "../mnist" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
image = "0.24"