[package]
name = "kmeans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
mnist = { path = "../mnist" }
wasm-bindgen = { version="0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version="0.2", features = ["js"] }
rayon = { version="1.5", optional=true }

[features]
multithread = ["rayon"]

[dev-dependencies]
gz = { path = "../gz" }