[package]
name = "linear-classifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = { path = "../mnist" }
rayon = { version="1.5", optional=true }

[features]
default = ["multithread"]
multithread = ["rayon"]
