[package]
name = "mnist-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
neural-network = { path = "../../libs/algorithms/neural-network" }
mnist = { path = "../../libs/helper/mnist" }
gz = { path = "../../libs/helper/gz" }
ndarray = { version="0.15", default-features=false }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

wasm-bindgen-test = "0.3"

# wasm-bindgen-rayon = { version="1.0", optional = true }
wasm-bindgen-rayon = { version="1.0", features=["no-bundler"], optional = true }

[features]
default = ["console_error_panic_hook"]
multithread = ["neural-network/multithread", "wasm-bindgen-rayon"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
]